# adventofcode

./: .gitignore  .pdm-python  01.py  02.py  03.py  pyproject.toml  template.py
01/: solution.py
2021/: 01.py  02.py
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
aoc/: __main__.py  helpers.py
solutions/: 01.py  02.py  03.py
