[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Patrick Brennan", email = "brennanpatrick20@gmail.com"},
]
dependencies = [
    "more-itertools>=9.0.0",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
new = "python -m aoc"
test = "python -m aoc --test"
submit = ""

[tool]
[tool.pdm]
